samples/_failures_safe/1761465655_7163ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a781381e.c: In function ‘main’:
./samples/SAFE/__tmp_a781381e.c:137:9: error: ‘MATRI’ undeclared (first use in this function)
  137 |         MATRI
      |         ^~~~~
./samples/SAFE/__tmp_a781381e.c:137:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a781381e.c:137:14: error: expected ‘;’ at end of input
  137 |         MATRI
      |              ^
      |              ;
./samples/SAFE/__tmp_a781381e.c:137:9: error: expected declaration or statement at end of input
  137 |         MATRI
      |         ^~~~~
./samples/SAFE/__tmp_a781381e.c:137:9: error: expected declaration or statement at end of input
